Updating code for migration to 1.0.0

--- a/theme/package.json
+++ b/theme/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "dark_minimal",
+    "name": "dark-minimal",
     "description": "Minimal dark theme for Ghost.",
     "demo": "attilathedud.me",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "engines": {
         "ghost": ">=0.9.0 <1.0.0"
     },
